prevent text in `<select>` overlapping indicator

--- a/app/assets/stylesheets/tylium/base.scss
+++ b/app/assets/stylesheets/tylium/base.scss
@@ -152,7 +152,7 @@ select:not(select[multiple]) {
   background-position: right 0.75rem center;
   background-size: 1rem 0.75rem;
   background-repeat: no-repeat;
-  padding-right: 1.5rem !important;
+  padding-right: 2rem !important;
 }
 
 // Firefox Fixes //
